--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
             <div class="section3">
                 <div>
-                    <h2>큐레이션</h2>
+                    <h2>큐레이션123</h2>
                     <span>큐레이션 더보기<i class="fa-solid fa-plus"></i></span>
                 </div>
                 <div>
